--- a/chatBox/Base.lproj/Main.storyboard
+++ b/chatBox/Base.lproj/Main.storyboard
@@ -105,6 +105,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="yyu-9j-yys">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="61o-kq-FkE" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="Pwy-ar-Ywq" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xoi-4P-VQL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -116,7 +117,6 @@
                         <segue destination="DUI-Lp-T9O" kind="relationship" relationship="viewControllers" id="WLM-UT-66K"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="61o-kq-FkE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2038" y="20"/>
         </scene>
@@ -162,7 +162,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="password"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zgg-Yk-Ffc">
                                 <rect key="frame" x="20" y="250" width="335" height="40"/>
@@ -171,7 +171,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="password"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ttK-Th-nde">
                                 <rect key="frame" x="137" y="310" width="100" height="50"/>
